<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/df_delete_bg">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/df_delete_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/delete_confirmation"
        android:textAlignment="center"
        android:textAppearance="@style/df_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/df_delete_cancel"
        style="@style/df_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/df_delete_cancel"
        android:textAlignment="center"
        android:textAppearance="@style/df_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/df_delete_confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/df_delete_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/df_delete_confirm"
        style="@style/df_delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/df_delete_confirm"
        android:textAppearance="@style/df_delete"
        app:layout_constraintBottom_toBottomOf="@id/df_delete_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/df_delete_cancel"
        app:layout_constraintTop_toTopOf="@id/df_delete_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>